--- a/sections/pronostico_extendido.html
+++ b/sections/pronostico_extendido.html
@@ -4,34 +4,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
     <link rel="shortcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <!-- ends head -->
 <body id="body-b">
 <!-- begin nav -->
-    <nav class="nav">
-        <div class="nav__div">
-            <a href="../index.html">
-            <img class="nav__img" src="../img/logo.png" alt="la imagen muestra el logo de pronostico desde la cueva"></a>
+    <nav class="navbar navbar-expand-md nav">
+        <div class="nav">
+        <a class="nav__img" href="../index.html">
+        <img src="../img/logo.png" alt="Muestra el logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span id="bt__color" class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+            <div class="navbar-nav nav__ul">
+            <a id="bt__color" class="nav-link active nav__link" aria-current="page" href="../index.html">Inicio</a>
+            <a class="nav-link nav__link" href="../sections/pronostico_extendido.html">Pronostico Extendido</a>
+            <a class="nav-link nav__link" href="../sections/rios.html">Rios</a>
+            <a class="nav-link nav__link" href="../sections/alertas.html" >Alertas</a>
+            <a class="nav-link nav__link" href="../sections/contacto.html">Contacto</a>
+            </div>
         </div>
-        <ul class="nav__ul">
-            <li class="nav__li">
-                <a class="nav__link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/pronostico_extendido.html">Pronostico Extendido</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/rios.html">Rios</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/alertas.html">Alertas</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/contacto.html">Contacto</a>
-            </li>
-        </ul>
+        </div>
     </nav>
 <!----- ends nav ----->
 <!-- begins header -->
@@ -80,5 +77,6 @@
         </section>
     </footer>
     <!----- ends footer ----->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
