--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav nav__ul">
-            <a id="bt__color" class="nav-link active nav__link" aria-current="page" href="#">Inicio</a>
+            <a id="bt__color" class="nav-link active nav__link" aria-current="page" href="index.html">Inicio</a>
             <a class="nav-link nav__link" href="sections/pronostico_extendido.html">Pronostico Extendido</a>
             <a class="nav-link nav__link" href="sections/rios.html">Rios</a>
             <a class="nav-link nav__link" href="sections/alertas.html" >Alertas</a>
