--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -77,9 +77,9 @@
                         <div class="fieldset__div"><label for="quincenal">Quincenal</label>
                         <input type="radio" id="quincenal" value="quincenal" name="frecuencia"></div>
                 </fieldset>
-                <div>
-                    <input class="button" type="reset" value="Cancelar">
-                    <input class="button" type="submit" value="Enviar">
+                <div class="form__div">
+                    <input class="form__button" type="reset" value="Cancelar">
+                    <input class="form__button" type="submit" value="Enviar">
                 </div>
             </form>
             <!-- ends form -->
@@ -103,8 +103,8 @@
             </li>
         </ul>
         <section>
-            <p class="footer__parr">Copyright © 2022 Pronostico - desde la cueva</p>
-            <p class="footer__parr" >Todos los derechos reservados</p>
+            <p class="footer__parr">Copyright © 2022 Pronostico - desde la cueva.</p>
+            <p class="footer__parr" >Todos los derechos reservados.</p>
         </section>
     </footer>
 </body>
