--- a/sections/pronostico_extendido.html
+++ b/sections/pronostico_extendido.html
@@ -75,8 +75,8 @@
             </li>
         </ul>
         <section>
-            <p class="footer__parr">Copyright © 2022 Pronostico - desde la cueva</p>
-            <p class="footer__parr" >Todos los derechos reservados</p>
+            <p class="footer__parr">Copyright © 2022 Pronostico - desde la cueva.</p>
+            <p class="footer__parr" >Todos los derechos reservados.</p>
         </section>
     </footer>
     <!----- ends footer ----->
