--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -78,8 +78,8 @@
                         <input type="radio" id="quincenal" value="quincenal" name="frecuencia"></div>
                 </fieldset>
                 <div class="form__div">
-                    <input class="form__button" type="reset" value="Cancelar">
-                    <input class="form__button" type="submit" value="Enviar">
+                    <input class="form__button button__resp" type="reset" value="Cancelar">
+                    <input class="form__button button__resp" type="submit" value="Enviar">
                 </div>
             </form>
             <!-- ends form -->
