--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <meta name="description" content="Descubri el pronostico en tu zona, enterate de las alertas y ultimas noticias del clima a nivel mundial">
+    <meta name="robots" content="index">
+    <meta name="keywords" content="pronostico, clima, rios, huracanes">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -36,6 +39,7 @@
 <!-- ends nav -->
     <!-- begins main -->
     <main class="main">
+        <h1> El pronostico en tu zona</h1>
         <section class="main__section">
             <article class="main__article">
                 <h2>Pronostico Actual</h2>
