--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <meta name="description" content="Para mantenerte al dia con el pronostico en tu zona, ingresa tus datos">
+    <meta name="keywords" content="clima en tu zona">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -78,8 +80,8 @@
                         <input type="radio" id="quincenal" value="quincenal" name="frecuencia"></div>
                 </fieldset>
                 <div class="form__div">
-                    <input class="form__button button__resp" type="reset" value="Cancelar">
-                    <input class="form__button button__resp" type="submit" value="Enviar">
+                    <input class="form__button" type="reset" value="Cancelar">
+                    <input class="form__button" type="submit" value="Enviar">
                 </div>
             </form>
             <!-- ends form -->
