--- a/sections/pronostico_extendido.html
+++ b/sections/pronostico_extendido.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <meta name="description" content="Aca vas a encontrar el pronostico al detalle del dia proximo y extendido para toda la semana">
+    <meta name="keywords" content="pronostico extendido, clima, zona, pronostico del dia, pronostico de la semana">
     <link rel="shortcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
