--- a/sections/alertas.html
+++ b/sections/alertas.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <meta name="description" content="Vas a enterarte de las alertas activas del clima">
+    <meta name="keywords" content="alertas, huracanes, huracan, tifon, inundaciones, granizo, lluvia torrencial">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
