salvo proyecto antes de las modificaciones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <!-- ends head -->
-<body id="body-a">
+<body id="body-b">
 <!-- begins nav -->
     <nav class="nav">
         <div class="nav__div">
@@ -38,8 +38,10 @@
     </nav>
 <!-- ends nav -->
     <!-- begins main -->
+    <header class="header">
+        <h1>El pronostico en tu zona</h1>
+    </header>
     <main class="main">
-        <h1> El pronostico en tu zona</h1>
         <section class="main__section">
             <article class="main__article">
                 <h2>Pronostico Actual</h2>
