--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -4,34 +4,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="description" content="Para mantenerte al dia con el pronostico en tu zona, ingresa tus datos">
     <meta name="keywords" content="clima en tu zona">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="body-b">
-    <nav class="nav">
-        <div class="nav__div">
-            <a href="../index.html">
-            <img class="nav__img" src="../img/logo.png" alt="la imagen muestra el logo de pronostico desde la cueva"></a>
+<!-- begins nav -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html"><img src="../img/logo.png" alt="logo del sitio"></a>
+            <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" id="icon-color"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pronostico_extendido.html">Pronostico Extendido</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="rios.html">Rios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./alertas.html">Alertas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul class="nav__ul">
-            <li class="nav__li">
-                <a class="nav__link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/pronostico_extendido.html">Pronostico Extendido</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/rios.html">Rios</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/alertas.html">Alertas</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/contacto.html">Contacto</a>
-            </li>
-        </ul>
     </nav>
     <!-- ends nav -->
     <header class="header">
@@ -39,49 +46,49 @@
     </header>
     <!-- ends header -->
     <main class="main">
-        <section class="main__section">
+        <section class="main__section" id="center">
             <h2>El clima en tu zona</h2>
-            <p class="main__parr">Queres enterarte de las ultimas novedades del clima en tu zona? Completa tus datos debajo para mantenerte actualizado</p>
-            <form class="main__form" action="envio.php">
-                <fieldset class="form__fieldset">
-                    <legend class="form__legend">Datos de contacto</legend>
-                        <div><label class="form__label" for="nombre">Nombre:</label>
-                        <input class="form__input" type="text" id="nombre" placeholder="Nombre y Apellido"></div>
+            <p class="alerta__parr">Queres enterarte de las ultimas novedades del clima en tu zona? Completa tus datos debajo para mantenerte actualizado</p>
+            <form class="main__form" action="error.html">
+                <fieldset class="formulario__fieldset">
+                    <legend class="formulario__legend">Datos de contacto</legend>
+                        <label class="formulario__label" for="nombre">Nombre:</label>
+                        <input class="formulario__input" type="text" id="nombre" placeholder="Nombre y Apellido"></div>
                         <div><label class="form__label" for="email">Email:</label>
-                        <input class="form__input" type="email" id="email" placeholder="ejemplo@mail.com"></div>
+                        <input class="formulario__input" type="email" id="email" placeholder="ejemplo@mail.com"></div>
                 </fieldset>
-                <fieldset class="form__fieldset">
-                    <legend class="form__legend">Datos geograficos</legend>
-                        <label class="form__label" for="provincia">Provincia</label>
-                        <select class="form__input" name="" id="provincia">
+                <fieldset class="formulario__fieldset">
+                    <legend class="formulario__legend">Datos geograficos</legend>
+                        <label class="formulario__label" for="provincia">Provincia</label>
+                        <select class="formulario__input" name="" id="provincia">
                             <option value="caba">Ciudad Autonoma de Buenos Aires</option>
                             <option value="bsas">Buenos Aires </option></select>
                 </fieldset>
-                <fieldset class="form__fieldset">
-                    <legend class="form__legend">Preferencias</legend>
-                        <div class="fieldset__div"><label for="clima para el dia siguiente">Clima para el dia siguiente</label>
+                <fieldset class="formulario__fieldset">
+                    <legend class="formulario__legend">Preferencias</legend>
+                        <div class="fieldset__divi"><label for="clima para el dia siguiente">Clima para el dia siguiente</label>
                         <input type="checkbox" id="clima para el dia siguiente" value="clima para el dia siguiente"></div>
                         <div class="fieldset__div"><label for="alertas metereologicas">Alertas metereologicas</label>
                         <input type="checkbox" id="alertas metereologicas" value="alertas metereologicas"></div>
-                        <div class="fieldset__div"><label for="ultimas noticias del clima">Ultimas noticias del clima</label>
+                        <div class="fieldset__divi"><label for="ultimas noticias del clima">Ultimas noticias del clima</label>
                         <input type="checkbox" id="ultimas noticias del clima" value="ultimas noticias del dia"></div>
-                        <div class="fieldset__div"><label for="niveles del rio">Niveles del rio</label>
+                        <div class="fieldset__divi"><label for="niveles del rio">Niveles del rio</label>
                         <input type="checkbox" id="niveles del rio" value="niveles del rio"></div>
                 </fieldset>
-                <fieldset class="form__fieldset">
-                    <legend class="form__legend">Frecuencia</legend>
-                        <div class="fieldset__div"><label for="diaria">Diaria</label>
+                <fieldset class="formulario__fieldset">
+                    <legend class="formulario__legend">Frecuencia</legend>
+                        <div class="fieldset__divi"><label for="diaria">Diaria</label>
                         <input type="radio" id="diaria" value="diaria" name="frecuencia"></div>
-                        <div class="fieldset__div"><label for="cada dos dias">Cada dos dias</label>
+                        <div class="fieldset__divi"><label for="cada dos dias">Cada dos dias</label>
                         <input type="radio" id="cada dos dias" value="cada dos dias" name="frecuencia"></div>
-                        <div class="fieldset__div"><label for="una vez por semana">Una vez por semana</label>
+                        <div class="fieldset__divi"><label for="una vez por semana">Una vez por semana</label>
                         <input type="radio" id="una vez por semana" value="una vez por semana" name="frecuencia"></div>
-                        <div class="fieldset__div"><label for="quincenal">Quincenal</label>
+                        <div class="fieldset__divi"><label for="quincenal">Quincenal</label>
                         <input type="radio" id="quincenal" value="quincenal" name="frecuencia"></div>
                 </fieldset>
                 <div class="form__div">
-                    <input class="form__button" type="reset" value="Cancelar">
-                    <input class="form__button" type="submit" value="Enviar">
+                    <input class="formulario__button"  type="reset" value="Cancelar">
+                    <input class="formulario__button" type="submit" value="Enviar">
                 </div>
             </form>
             <!-- ends form -->
@@ -109,5 +116,6 @@
             <p class="footer__parr" >Todos los derechos reservados.</p>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
