--- a/sections/rios.html
+++ b/sections/rios.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronostico - desde la cueva</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="description" content="Vas a encontrar la altura de los rios, y los niveles por satelite y radar">
     <meta name="keywords" content="rios, altura, radar, imagenes, satelite">
     <link rel="shortcut icon" href="../img/favicon.png">
@@ -12,29 +13,34 @@
 <!-- ends head -->
 <body id="body-b">
 <!-- begin nav -->
-    <nav class="nav">
-        <div class="nav__div">
-            <a href="../index.html">
-            <img class="nav__img" src="../img/logo.png" alt="la imagen muestra el logo de pronostico desde la cueva"></a>
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html"><img src="../img/logo.png" alt="logo del sitio"></a>
+        <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon" id="icon-color"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pronostico_extendido.html">Pronostico Extendido</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rios.html">Rios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./alertas.html">Alertas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+            </ul>
         </div>
-        <ul class="nav__ul">
-            <li class="nav__li">
-                <a class="nav__link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/pronostico_extendido.html">Pronostico Extendido</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/rios.html">Rios</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/alertas.html">Alertas</a>
-            </li>
-            <li class="nav__li">
-                <a class="nav__link" href="../sections/contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </nav>
+    </div>
+</nav>
 <!----- ends nav ----->
 <!-- begins header -->
     <header class="header">
@@ -44,17 +50,23 @@
     <!-- begins main -->
     <main class="main">
         <section class="main__section">
-            <article class="main__article">
+            <p class="alerta__parr">Los rios son parte vital para nuestra subsistencia. Se podria decir que son los vasos sanguíneos de un cuerpo, pero para la tierra.Los rios son cursos de agua, con baja salinidad, por lo que se dice que son de agua dulce. El agua dulce representa solo el <b>3.5%</b> del agua del mundo. Por lo que es vital cuidarla.</p>
+            <p class="alerta__parr">Pero a su vez, un cambio en la altura de un río, puede afectarnos de diferentes maneras. Además es importante conocer sus estados para nuestra diario vivir y así poder realizar actividad con normalidad en áreas costeras y aledañas.
+            Por ello a continuación, se detallan las alturas de los ríos según las zonas. Tambien se podrá mantener actualizado gracias al servico de imágenes por radar y satélite.</p>
+            <article class="main__card">
                 <h2>Altura de los rios</h2>
-                <img class="main__img" src="../img/rios.png" alt="En la imagen se muestra la altura de los rios">
+                <img class="card__img" src="../img/rios.png" alt="En la imagen se muestra la altura de los rios">
+                <p class="card__parr">Los ríos constituyen una parte importante de nuestro ecosistema, pero debemos estar atentos a cualquier cambio en sus alturas. Acá vas a encontrar esta información al detalle.</p>
             </article>
-            <article id="art-3" class="main__article">
+            <article id="art-3" class="main__card">
                 <h3>Imagenes por radar</h3>
-                <img class="main__img" src="../img/imagen_radar_rios.png" alt="En la imagen se muestra por radar, el estado de los rios">
+                <img class="card__img" src="../img/imagen_radar_rios.png" alt="En la imagen se muestra por radar, el estado de los rios">
+                <p class="card__parr">Utilizando la tecnolgía por radar podemos detectar anomalías en las zonas de los ríos mas cercanas a las costas y río adentro. Previniendo así sudestadas.</p>
             </article>
-            <article class="main__article">
+            <article class="main__card">
                 <h3>Imagenes por satelite</h3>
-                <img class="main__img" src="../img/imagen_satelite_rios.png" alt="En la imagen se muestra el estado de los rios por satelite">
+                <img class="card__img" src="../img/imagen_satelite_rios.png" alt="En la imagen se muestra el estado de los rios por satelite">
+                <p class="card__parr">Gracias a los satélites dispuestos y la información procesada, podemos apreciar corrientes cambiantes. Diferencias de temperaturas. Entre otra información.</p>
             </article>
         </section>
         <!-- ends section -->
@@ -82,5 +94,6 @@
         </section>
     </footer>
     <!-- ends footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
